--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "8.4"
+version: "3.8"
 services:
   db:
     image: mysql:8.4
@@ -8,6 +8,7 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=herfeeling
+      - TZ=Asia/Bangkok
     volumes:
       - mysql_data:/var/lib/mysql
 
