add flag no cache on cloud build yaml

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ options:
 steps:
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/her-feeling/text-moods-api', '.']
+    args: ['build', '--no-cache', '-t', 'gcr.io/her-feeling/text-moods-api', '.']
   # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/her-feeling/text-moods-api']
