--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -22,10 +22,10 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Delete Old version of Docker image
         run: |
-          docker rmi her-feeling-server:latest || echo "Image not found, skipping deletion"
+          docker rmi ${{ secrets.DOCKER_USERNAME }}/her-feeling-server:latest || echo "Image not found, skipping deletion"
       - name: Build Docker image
         run: |
-          docker build -t her-feeling-server:latest .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/her-feeling-server:latest .
       - name: Push Docker image
         run: |
-          docker push her-feeling-server:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/her-feeling-server:latest
