--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -23,10 +23,10 @@ jobs:
       - name: Delete Old version of Docker image
         run: |
           echo ${{ secrets.DOCKER_USERNAME }}
-          docker rmi ${{ secrets.DOCKER_USERNAME }}/her-feeling-server:latest || echo "Image not found, skipping deletion"
+          docker rmi ${{ secrets.DOCKER_USERNAME }}/her-feeling-server || echo "Image not found, skipping deletion"
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/her-feeling-server:latest .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/her-feeling-server .
       - name: Push Docker image
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/her-feeling-server:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/her-feeling-server
