--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -22,11 +22,10 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Delete Old version of Docker image
         run: |
-          echo ${{ secrets.DOCKER_USERNAME }}
           docker rmi ${{ secrets.DOCKER_USERNAME }}/her-feeling-server || echo "Image not found, skipping deletion"
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/her-feeling-server .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/her-feeling-server ../
       - name: Push Docker image
         run: |
           docker push ${{ secrets.DOCKER_USERNAME }}/her-feeling-server
