--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -22,10 +22,10 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Delete Old version of Docker image
         run: |
-          docker rmi ${{ secrets.DOCKER_USERNAME }}/her-feeling-server || echo "Image not found, skipping deletion"
+          docker rmi migboy03/her-feeling-server || echo "Image not found, skipping deletion"
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/her-feeling-server ../
+          docker build -t migboy03/her-feeling-server .
       - name: Push Docker image
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/her-feeling-server
+          docker push migboy03/her-feeling-server
