--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -20,6 +20,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Verify Docker login
+        run: docker info
       - name: Delete Old version of Docker image
         run: |
           docker rmi migboy03/her-feeling-server || echo "Image not found, skipping deletion"
